# dotfiles

./: .copier-answers.yml  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  Brewfile  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  _typos.toml  changed_files.txt  claude_mcp.json  claude_settings.json  dock.sh  install.sh  licenserc.toml  macos.sh  markdown-header.toml  mkdocs.yml  pyproject.toml  release_notes.md  software_list.md  uninstall.sh  uv_tools.txt  vscode_settings.json
.claude/: settings.json
.claude/agents/: install-safety-reviewer.md
.claude/hooks/: guard-managed-files.sh  lint-edited-file.sh  typecheck-touched.sh
.claude/skills/check/: SKILL.md
.config/: licenserc.toml  lychee.toml  release-please-config.json  rumdl.toml  typos.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  link-check.yml  main.yml  pr.yml
.serena/: project.yml
Brewfile.d/: 1password.brewfile  homelab.brewfile  personal  personal.brewfile
docs/: architecture.html  architecture.md  commands.html  commands.md  getting-started.html  getting-started.md  index.html  index.md  llms-full.txt  llms.txt  quality.html  quality.md  security.html  security.md  stack.html  stack.md
docs/assets/: main.js  style.css
docs/casts/: fco.cast  fif.cast  gs-all.cast  install.cast  pyclean.cast  wtfis.cast
docs/includes/: install.md
home/: .gitconfig  .stow-local-ignore  .typos.toml  .zshenv
home/.claude/: CLAUDE.md  settings.json
home/.claude/hooks/: ollama-roster.sh
home/.claude/skills/local-offload/: SKILL.md
home/.config/: topgrade.toml
home/.config/atuin/: config.toml
home/.config/fish/: config.fish
home/.config/fish/completions/: fkill.fish  git_prune_local.fish  install.sh.fish  ollm.fish  pset.fish  pubkey.fish  pyclean.fish
home/.config/fish/conf.d/: 01_brew.fish  abbreviations.fish  aliases.fish  localbin.fish  rancher.fish  zz-atuin.fish  zzz-local.fish
home/.config/fish/functions/: __clipboard_copy.fish  __launch_docs_port_open.fish  __open_at_line.fish  __os_open.fish  dnsflush.fish  dotfiles-doctor.fish  eachdir.fish  fco.fish  fcor.fish  fif.fish  fkill.fish  forrepos.fish  fsearch.fish  gccd.fish  gcor.fish  git_prune_local.fish  gp-all.fish  gs-all.fish  is_linux.fish  is_macos.fish  is_wsl.fish  launch-docs.fish  pset.fish  pubkey.fish  pyclean.fish  wtfis.fish
home/.config/git/: ignore
home/.config/git/template/hooks/: post-checkout
home/.config/tmux/: tmux.conf
home/.config/uv/: uv.toml
home/.config/zsh/: .zshrc
home/.config/zsh/conf.d/: 01_brew.zsh  aliases.zsh  localbin.zsh  rancher.zsh  zz-atuin.zsh  zzz-local.zsh
home/.config/zsh/functions/: __clipboard_copy  __launch_docs_port_open  __open_at_line  __os_open  dnsflush  dotfiles-doctor  fif  fkill  git_prune_local  is_linux  is_macos  is_wsl  launch-docs  pubkey  pyclean
home/.ssh/: config
iterm2/: com.googlecode.iterm2.plist
scripts/: brewfile_core.sh  brewfile_taps.sh  bundle_select.sh  check-ssh-config.sh  claude_settings_merge.sh  gitconfig_migrate.sh  ollama_models.sh  refresh-binary-checksums.sh  verify_install.sh  vm-smoke.sh
src/dotfiles_install/: __init__.py  __main__.py  bootstrap.py  brew_bundle.py  brewfile.py  bundle_select.py  claude_settings_merge.py  claude_setup.py  cli.py  commands.py  context.py  gitconfig_migrate.py  layout.py  ollama.py  os_detect.py  overlays.py  phases.py  post_stow.py  privileged.py  settings_merge.py  shell_select.py  stow.py  system_setup.py  ui.py  verify_install.py  vscode_setup.py
tests/: README.md  brewfile_core.bats  brewfile_taps.bats  bundle_select.bats  check_ssh_config.bats  claude_hooks.bats  claude_settings.bats  conftest.py  dock.bats  fish_functions.bats  git_prune_local.bats  git_prune_local_zsh.bats  gitconfig_migrate.bats  ollm.bats  template-divergences.txt  template_sync.bats  test_bootstrap.py  test_brew_bundle.py  test_brewfile.py  test_bundle_select.py  test_claude_settings_merge.py  test_claude_setup.py  test_cli.py  test_commands.py  test_consistency.py  test_coverage.py  test_data_files.py  test_docs_site.py  test_gitconfig_migrate.py  test_manifests.py  test_ollama.py  test_ollm_tools_loop.py  test_os_detect.py  test_overlays.py  test_phases.py  test_post_stow.py  test_privileged.py  test_secret_hygiene.py  test_settings_merge.py  test_shell_select.py  (+10 more)
