# SPDX-FileCopyrightText: © 2026 Tyler Nivin
# SPDX-License-Identifier: MIT

# This repo isn't a Python package — pyproject.toml exists only to give the
# config-validation test suite (tests/test_*.py) a managed pytest environment.
# Run it with:  uv run pytest
# The fish-behavior tests are separate and run with bats (see tests/README.md).
[project]
name = "dotfiles"
# Nothing builds/reads this (package = false), but release-please keeps it in sync with the
# version-of-record (.config/.release-please-manifest.json + git tags) via extra-files — it
# rewrites this AND uv.lock's dotfiles version together on each release, so uv-lock stays
# green. Kept in step manually here so manifest = pyproject = uv.lock.
version = "1.14.0"
requires-python = ">=3.14"
description = "Tyler Nivin's dotfiles and config repo"
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]

classifiers = ["Programming Language :: Python :: 3"]

dependencies = []

[dependency-groups]
dev = [
  "json5>=0.14.0",
  "playwright>=1.60.0",
  "pytest>=9.1.0",
  "pytest-playwright>=0.8.0",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "ruff>=0.15.17",
  "ty>=0.0.49",
  "typer>=0.26.8",
]

[tool.uv]
package = false # don't try to build/install this repo as a package

[tool.pytest.ini_options]
testpaths = ["tests"]
# The installer helper package lives under src/ but is deliberately not installed
# (package = false). Put src/ on sys.path so tests can `import dotfiles_install`.
pythonpath = ["src"]
markers = [
  "integration: end-to-end tests that boot a VM (opt-in, needs tart); skipped by default.",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.format]
docstring-code-format = true # format code in docstrings

[tool.ruff.lint]
extend-select = [
  "ALL", # all the rules! (except complexity, which is noisy in configs)
]

ignore = ["D203", "D212", "D401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use `assert` (S101) and shell out to git/fish via subprocess
# (S603/S607) with controlled, non-user input.
"tests/**" = [
  "S101",
  "S603",
  "S607",
  "INP001", # pytest test dir, not an importable package (flat `from conftest import`)
  "SLF001", # tests verify private phase helpers (idempotency guards, install command shape)
]
# verify_install shells out to fixed git/bioutil commands (resolved via shutil.which, so
# no partial-path S607); the argv is constant with no user input, so the S603 audit is moot.
"src/dotfiles_install/verify_install.py" = ["S603"]
# commands.py is the installer's subprocess seam — it deliberately runs repo-defined commands
# (brew, curl, fzf); the S603 "untrusted input" audit is the whole point of centralizing here.
"src/dotfiles_install/commands.py" = ["S603"]
# Typer models CLI flags as boolean parameters with boolean defaults — the idiomatic Typer
# surface, not the boolean-trap FBT guards against — so silence them for the CLI module.
"src/dotfiles_install/cli.py" = ["FBT001", "FBT002"]

[tool.ruff.lint.mccabe]
max-complexity = 10
