# SPDX-FileCopyrightText: © 2026 Tyler Nivin
# SPDX-License-Identifier: MIT

# The installer is a real Python package (src/dotfiles_install) exposing a `dotfiles-install`
# console entry point; install.sh is a thin stub that hands off to it via uv (see #72). The same
# managed env also runs the config-validation suite (uv run pytest); fish tests run via bats.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotfiles"
# The built wheel's version. release-please keeps it in sync with the version-of-record
# (.config/.release-please-manifest.json + git tags) via extra-files — it rewrites this AND
# uv.lock's dotfiles version together on each release, so `uv lock --check` stays green. Kept in
# step manually here so manifest = pyproject = uv.lock.
version = "1.23.2"
requires-python = ">=3.14"
description = "Tyler Nivin's dotfiles and config repo"
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]

classifiers = ["Programming Language :: Python :: 3"]

# The installer's runtime deps (the CLI + UI). Everything else is dev-only (below).
dependencies = ["rich>=15.0.0", "typer>=0.26.8"]

[project.scripts]
dotfiles-install = "dotfiles_install.cli:app"

[dependency-groups]
dev = [
  "json5>=0.14.0",
  "playwright>=1.60.0",
  "pytest>=9.1.0",
  "pytest-cov>=7.1.0",
  "pytest-playwright>=0.8.0",
  "pyyaml>=6.0.3",
  # Not used by dotfiles_install itself — home/.local/bin/ollm-tools-loop declares it as its
  # own PEP 723 script dependency (`uv run --script` installs it there at runtime). ty has no
  # PEP 723 awareness, so it's duplicated here purely so `ty check .` (which scans that script
  # via [tool.ty.src] below) can resolve the import instead of reporting it unresolved.
  "regex>=2026.6.28",
  "ruff>=0.15.17",
  "ty>=0.0.49",
]

[tool.uv]
package = true # build/install the package so the `dotfiles-install` console script exists

[tool.hatch.build.targets.wheel]
# The project is named "dotfiles" but the importable package is dotfiles_install under src/.
packages = ["src/dotfiles_install"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The package is installed (editable) into the uv env, so `import dotfiles_install` resolves
# without this; kept as a belt-and-suspenders for a bare `pytest` run outside `uv run`.
pythonpath = ["src"]
markers = [
  "integration: end-to-end tests that boot a VM (opt-in, needs tart); skipped by default.",
]

# Line-coverage gate for the installer core. `--cov` is NOT in addopts on purpose: a bare
# `pytest tests/test_foo.py` during development would otherwise report partial coverage and trip
# fail_under. The gate runs explicitly via `pytest --cov` (the local /check stage and CI), which
# reads the source/threshold below.
[tool.coverage.run]
source = ["dotfiles_install"]
# The `python -m dotfiles_install` entry shim is a one-line `app()` call with nothing to unit-test.
omit = ["*/dotfiles_install/__main__.py"]

[tool.coverage.report]
show_missing = true
# Ratchet floor for the Python core (currently ~97%). Raise it as coverage climbs; it exists to
# catch a meaningful regression, not to pin an exact number.
fail_under = 95

[tool.ruff]
target-version = "py314"
line-length = 100
# ruff (like ty below) discovers files by extension by default, so this extensionless
# PEP-723 `uv run --script` CLI is otherwise invisible to `ruff check .` — the exact
# command the ruff-check prek hook runs — despite carrying real Python to lint.
extend-include = ["home/.local/bin/ollm-tools-loop"]
# The Claude Code guard hooks ship from the template as-is, so they aren't this project's own
# code to lint (a future ruff rule shouldn't redden your CI over them). The `**/.claude/hooks`
# glob matches them at any depth.
extend-exclude = ["**/.claude/hooks"]

[tool.ruff.format]
docstring-code-format = true # format code in docstrings

[tool.ruff.lint]
extend-select = [
  "ALL", # all the rules! (except complexity, which is noisy in configs)
]

ignore = ["D203", "D212", "D401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# CLI/maintenance scripts print to the user (T201) and aren't an importable package (INP001).
# Covers the template's own scripts/check_copier_src_path.py alongside this repo's helpers.
"scripts/**" = ["T201", "INP001"]
# Tests legitimately use `assert` (S101) and shell out to git/fish via subprocess
# (S603/S607) with controlled, non-user input.
"tests/**" = [
  "S101",
  "S603",
  "S607",
  "INP001", # pytest test dir, not an importable package (flat `from conftest import`)
  "SLF001", # tests verify private phase helpers (idempotency guards, install command shape)
]
# verify_install shells out to fixed git/bioutil commands (resolved via shutil.which, so
# no partial-path S607); the argv is constant with no user input, so the S603 audit is moot.
"src/dotfiles_install/verify_install.py" = ["S603"]
# commands.py is the installer's subprocess seam — it deliberately runs repo-defined commands
# (brew, curl, fzf); the S603 "untrusted input" audit is the whole point of centralizing here.
"src/dotfiles_install/commands.py" = ["S603"]
# Typer models CLI flags as boolean parameters with boolean defaults — the idiomatic Typer
# surface, not the boolean-trap FBT guards against — so silence them for the CLI module. The
# command function also collects one parameter per flag, so PLR0913 (too-many-arguments) is
# expected for a Typer command and silenced here too.
"src/dotfiles_install/cli.py" = ["FBT001", "FBT002", "PLR0913"]
# ollm-tools-loop talks only to the Ollama server the caller names via --url (default
# localhost); post_json() validates the scheme is http(s) before ever calling urlopen, so
# the S310 "file:// or custom scheme" audit is exactly the risk already ruled out at runtime.
# ANN401: the `regex` dependency ships no py.typed/stubs, so its compiled-pattern type isn't
# resolvable for an annotation — `Any` is the honest, forced choice here, not laziness.
"home/.local/bin/ollm-tools-loop" = ["S310", "ANN401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ty.src]
# Same extension-based discovery gap as ruff above: `ty check .` (what the ty prek hook
# runs) silently skips this extensionless script unless explicitly included alongside
# the default root.
include = [".", "home/.local/bin/ollm-tools-loop"]
